reveal prevent flickering

--- a/portfolio-webpage/src/app/globals.css
+++ b/portfolio-webpage/src/app/globals.css
@@ -14,3 +14,7 @@ body::-webkit-scrollbar-thumb {
   background-color: rgba(255, 255, 255, 0.1);
   border-radius: 10px;
 }
+
+html.sr .load-hidden {
+  visibility: hidden;
+ }
